syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "internal/pb;pb";

message UploadRequest {
    repeated string files = 1;
    bool multipart = 2;
    string inclusion_prefix = 3;
}

message Values {
    repeated string values = 1;
}

message SignedHeadersMap {
    map<string, Values> headers = 1;
}

message FormDataValuesMap {
    map<string, string> form_values = 1;
}

message PresignedUrls {
    string url = 1;
    string method = 2;
    int32 file_id = 3;
    google.protobuf.Timestamp updated_at = 4;

    oneof urls_metadata {
       SignedHeadersMap signed_headers = 5;
       FormDataValuesMap form_data_values =6;
    }
}

message UploadResponse {
    map<string, PresignedUrls> files = 1;
}

message UploadStatusRequest {
    google.protobuf.Timestamp updated_at = 1;
    map<int32, bool> files = 2;
}